kubernetes-manifest/database-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-staging
  namespace: quiz-staging
  labels:
    app: mongo-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-staging
  template:
    metadata:
      labels:
        app: mongo-staging
    spec:
      containers:
      - name: mongo
        image: mongo:4.4.6
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-storage-staging
          mountPath: /data/db
      volumes:
      - name: mongo-storage-staging
        persistentVolumeClaim:
          claimName: mongo-pvc-quiz-staging
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service-staging
  namespace: quiz-staging
spec:
  selector:
    app: mongo-staging
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  type: ClusterIP
