kubernetes-manifest/frontend-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-staging
  namespace: quiz-staging
  labels:
    app: frontend-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-staging
  template:
    metadata:
      labels:
        app: frontend-staging
    spec:
      containers:
      - name: frontend
        image: 228578233417.dkr.ecr.us-east-1.amazonaws.com/quiz-app-repo:frontend-ce41dc73
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-staging
  namespace: quiz-staging
spec:
  selector:
    app: frontend-staging
  ports:
  - port: 8080
    protocol: TCP
  type: ClusterIP
