kubernetes-manifest/ingress-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quiz-app-ingress-staging
  namespace: quiz-staging
  annotations:
    alb.ingress.kubernetes.io/group.name: iovision-app-lb
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:228578233417:certificate/cc1195ab-d9cd-4c2d-8f81-585fea51a766"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  rules:
  - host: "staging-quiz.iovision.site"
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service-staging
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service-staging
            port: 
              number: 8080
